complete the task

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-       <h2> hello every one ,here can you pick your favourit product .<br>
+        <h1 style="text-align: center; font-family: cursive;">Bus-mall project</h1>
+       <h3 style="text-align: center; font-family: cursive;"> hello every one ,here can you pick your favourite products .
         you have 25 tries available ,lets start </h1>
     </header>
     <main>
@@ -17,7 +18,7 @@
 <img id="center" src="" alt="" style="height: 300px; width: 300px;">
 <img id="right" src="" alt="" style="height: 300px; width: 300px;">
       </div>
-      <input type="submit" value="Result" id="submit">
+      <input type="submit" value=" View Results" id="submit">
       <div id="theResult"></div>
 
         
