--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 <img id="center" src="" alt="" style="height: 300px; width: 300px;">
 <img id="right" src="" alt="" style="height: 300px; width: 300px;">
       </div>
-      <input type="submit" value=" View Results" id="submit">
-      <div id="theResult"></div>
+      
+      <canvas id="myChart" width="400px" height="400px" ></canvas>
 
         
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="app.js"></script>
 </body>
 </html>
