saving in local storage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <img id="right" src="" alt="" style="height: 300px; width: 300px;">
       </div>
       
-      <canvas id="myChart" width="400px" height="400px" ></canvas>
+      <canvas id="myChart"  ></canvas>
 
         
     </main>
